do main form, and properties

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Chat</title>
     <style>
       html, body {
-        margin: 0;
+        margin: 10px;
         padding: 0;
         top: 0;
         bottom: 0;
